objects/RMA__c.object
<CustomObject>
    <description>Basic RMA tracking. This is the RMA header and the details of the items associated with the RMA are in the RMA Details.</description>
    <fields>
        <fullName>Account_Manager_Email_1__c</fullName>
        <label>Account Manager Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Email_2__c</fullName>
        <label>Account Manager Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RMA&apos;s</relationshipLabel>
        <relationshipName>R00N30000000t29BEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address - Loc 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_Loc_2__c</fullName>
        <label>Address - Loc 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_Loc_3__c</fullName>
        <label>Address - Loc 3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_Loc_4__c</fullName>
        <label>Address - Loc 4</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>RMA&apos;s</relationshipLabel>
        <relationshipName>R00N30000000t2CnEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Add&apos;l Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compromised_Breached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compromised or Breached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactFirstName__c</fullName>
        <label>Contact First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactLastName__c</fullName>
        <label>Contact Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Loc_2__c</fullName>
        <label>Contact Email - Loc 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Loc_3__c</fullName>
        <label>Contact Email - Loc 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Loc_4__c</fullName>
        <label>Contact Email - Loc 4</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email -Loc 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Loc_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact - Loc 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RMA&apos;s (Contact - Loc 1)</relationshipLabel>
        <relationshipName>R00N500000021gyAEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Loc_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact - Loc 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RMA&apos;s (Contact - Loc 2)</relationshipLabel>
        <relationshipName>R00N500000021gyBEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Loc_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact - Loc 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RMA&apos;s (Contact - Loc 3)</relationshipLabel>
        <relationshipName>R00N500000021gyCEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Loc_2__c</fullName>
        <label>Contact Phone - Loc 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Loc_3__c</fullName>
        <label>Contact Phone - Loc 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Loc_4__c</fullName>
        <label>Contact Phone - Loc 4</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone -Loc 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RMA&apos;s</relationshipLabel>
        <relationshipName>R00N30000000t2CsEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContainsSystemReplacement__c</fullName>
        <description>summarizes the line item flags</description>
        <label>ContainsSystemReplacement</label>
        <summarizedField>RMA_Item__c.Chassis__c</summarizedField>
        <summaryForeignKey>RMA_Item__c.RMA__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Corrective_Action__c</fullName>
        <label>Corrective Action</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did this unit or component fail &quot;out of the box&quot;</description>
        <label>Dead On Arrival</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Since_RMA_Open__c</fullName>
        <formula>If ( NOT( OR(
ISPICKVAL( Status__c ,&apos;Closed&apos;),
ISPICKVAL( Status__c ,&apos;Cancelled&apos;),
ISPICKVAL( Status__c ,&apos;In FA/Recd&apos;))),
TODAY() -  DATEVALUE(CreatedDate) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since RMA Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disposition_Notes__c</fullName>
        <label>Disposition Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Return to Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scrap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENG FA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LANNER FA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO FA REQUIRED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FA_Report_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field to request Silver Peak Engineering to provide a Failure Analysis Report for this RMA</inlineHelpText>
        <label>Failure Analysis Report Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fault_Category__c</fullName>
        <description>Category of faults found</description>
        <label>Fault Category</label>
        <picklist>
            <picklistValues>
                <fullName>Backplane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compact Flash Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disk Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Embedded USB Flash Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encryption Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motherboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete no FA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raid Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Riser Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown Yet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USB Flash Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workmanship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fault_Code__c</fullName>
        <label>Fault Subcategory</label>
        <picklist>
            <picklistValues>
                <fullName>BIOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firmware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAC Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete no FA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fault_Found__c</fullName>
        <label>Fault Found</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsRecycling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for email notification triggered by a workflow</description>
        <label>Is Recycling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineCount__c</fullName>
        <label>LineCount</label>
        <summaryForeignKey>RMA_Item__c.RMA__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lock_Dispatch_Shipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Dispatch Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Recipient__c</fullName>
        <label>Next Recipient</label>
        <picklist>
            <picklistValues>
                <fullName>Operations</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Note_Loc_1__c</fullName>
        <label>Note -Loc 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_Loc_2__c</fullName>
        <label>Note - Loc 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_Loc_3__c</fullName>
        <label>Note - Loc 3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opp_Owner__c</fullName>
        <formula>Request__r.Opportunity_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Notification_Text__c</fullName>
        <formula>Account__r.Partner_Notifications__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Notification Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Notification__c</fullName>
        <inlineHelpText>This email is used on selected notifications for partners</inlineHelpText>
        <label>Partner Notification</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pending_EDI_Ack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Our workflow rules toggle this field based on whether it has been dispatched and acknowledged. When order is sent this flag is set to true, when acknowledgement is made, it is returned to false.</description>
        <label>Pending EDI Ack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Problem_Description__c</fullName>
        <label>Problem Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Loc_2__c</fullName>
        <label>Product - Loc 2</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Loc_3__c</fullName>
        <label>Product - Loc 3</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Loc_4__c</fullName>
        <label>Product - Loc 4</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product -Loc 1</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMAId__c</fullName>
        <formula>MID( Name , 14,10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RMAId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Compromise_Breach__c</fullName>
        <label>Reason for Compromise/Breach</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POC Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>RMA&apos;s</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested By</label>
        <picklist>
            <picklistValues>
                <fullName>TAC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_Case__c</fullName>
        <label>Root Case</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ship_To_Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Initiated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSM Assist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In FA/Recd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SystemCount__c</fullName>
        <label>SystemCount</label>
        <summarizedField>RMA_Item__c.Chassis__c</summarizedField>
        <summaryForeignKey>RMA_Item__c.RMA__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>System_Engineer_Email_1__c</fullName>
        <label>System Engineer Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>System_Engineer_Email_2__c</fullName>
        <label>System Engineer Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Tracking_Information__c</fullName>
        <inlineHelpText>Enter in format CARRIER:TRACKING NUMBERS</inlineHelpText>
        <label>Tracking Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Return for Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance Replace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eval Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recall</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>RMA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllOpenRMAs</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open RMA&apos;s</label>
    </listViews>
    <listViews>
        <fullName>NonEvalRMAs</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Case__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>notEqual</operation>
            <value>Eval Return</value>
        </filters>
        <label>Non-Eval RMA&apos;s</label>
    </listViews>
    <nameField>
        <displayFormat>RMA-{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>RMA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMA&apos;s</pluralLabel>
    <recordTypes>
        <fullName>CMA</fullName>
        <active>true</active>
        <description>The CMA process is to be executed as a record type on the RMA object</description>
        <label>CMA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Eval_RMA</fullName>
        <active>true</active>
        <description>An RMA for an Eval return</description>
        <label>Eval RMA</label>
    </recordTypes>
    <recordTypes>
        <fullName>RMA</fullName>
        <active>true</active>
        <description>Advance Replace, Repair and REcall RMAs</description>
        <label>RMA</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>